[gd_scene load_steps=3 format=3 uid="uid://cqin3vtpl6ksr"]

[ext_resource type="Script" path="res://scenes/MapCreator.gd" id="1_caiy4"]
[ext_resource type="Texture2D" uid="uid://bemkd2wtra4ld" path="res://images/main_bk.png" id="2_rb622"]

[node name="main" type="Node"]

[node name="MapMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_caiy4")
metadata/_edit_use_anchors_ = true

[node name="Bg" type="Sprite2D" parent="MapMenu"]
position = Vector2(197, -12)
texture = ExtResource("2_rb622")

[node name="MainMapContainer" type="VBoxContainer" parent="MapMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -116.5
offset_right = 120.0
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2

[node name="MapName" type="LineEdit" parent="MapMenu/MainMapContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Map name"

[node name="MapDescription" type="LineEdit" parent="MapMenu/MainMapContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
placeholder_text = "Descrption"

[node name="Label" type="Label" parent="MapMenu"]
layout_mode = 0
offset_left = -106.0
offset_top = -214.0
offset_right = 95.0
offset_bottom = -156.0
theme_override_colors/font_color = Color(0.811765, 0.509804, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 33
text = "Create Map"

[node name="SaveButton" type="Button" parent="MapMenu"]
layout_mode = 0
offset_left = 25.0
offset_top = 70.0
offset_right = 127.0
offset_bottom = 102.0
text = "Save"

[node name="ReturnButton" type="Button" parent="MapMenu"]
layout_mode = 0
offset_left = -186.0
offset_top = 68.0
offset_right = -88.0
offset_bottom = 99.0
text = "Return"

[node name="TextEdit" type="TextEdit" parent="MapMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 329.0
offset_top = -124.0
offset_right = 481.0
offset_bottom = 56.0
placeholder_text = "Elements"
wrap_mode = 1

[node name="Label2" type="Label" parent="MapMenu"]
layout_mode = 0
offset_left = 329.0
offset_top = -156.0
offset_right = 479.0
offset_bottom = -123.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Elements Identfied "

[node name="Local_only" type="CheckBox" parent="MapMenu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 153.0
offset_top = -112.0
offset_right = 179.0
offset_bottom = -88.0
button_pressed = true

[node name="PrivacyButton" type="OptionButton" parent="MapMenu"]
layout_mode = 0
offset_left = 143.0
offset_top = -18.0
offset_right = 243.0
offset_bottom = 13.0
item_count = 2
allow_reselect = true
popup/item_0/text = "Private"
popup/item_0/id = 0
popup/item_1/text = "Public"
popup/item_1/id = 1

[node name="Label" type="Label" parent="."]
offset_left = 708.0
offset_top = 181.0
offset_right = 789.0
offset_bottom = 220.0
text = "Local Only"

[node name="Label2" type="Label" parent="."]
offset_left = 719.0
offset_top = 273.0
offset_right = 800.0
offset_bottom = 312.0
text = "Privacy"

[connection signal="pressed" from="MapMenu/SaveButton" to="MapMenu" method="_on_save_button_pressed"]
[connection signal="pressed" from="MapMenu/ReturnButton" to="MapMenu" method="_on_return_button_pressed"]
[connection signal="toggled" from="MapMenu/Local_only" to="MapMenu" method="_on_local_only_toggled"]
[connection signal="item_selected" from="MapMenu/PrivacyButton" to="MapMenu" method="_on_privacy_button_item_selected"]
